--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,6 @@
 auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=true
 auxiliary.org-netbeans-modules-php-nette2.manually-enabled=true
-browser.reload.on.save=true
+browser.reload.on.save=false
 include.path=${php.global.include.path}
 php.version=PHP_70
 source.encoding=UTF-8
